@@ -1,49 +1,28 @@
-/*
-  Copyright 2012 - 2015 pac4j organization
-
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
- */
 package org.pac4j.oidc.client;
 
+import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 
+import com.nimbusds.jose.JOSEException;
+import com.nimbusds.jose.proc.BadJOSEException;
 import org.apache.commons.lang3.StringUtils;
-import org.pac4j.core.client.ClientType;
 import org.pac4j.core.client.IndirectClient;
 import org.pac4j.core.client.RedirectAction;
+import org.pac4j.core.context.HttpConstants;
 import org.pac4j.core.context.WebContext;
 import org.pac4j.core.exception.RequiresHttpAction;
 import org.pac4j.core.exception.TechnicalException;
-import org.pac4j.core.util.CommonHelper;
 import org.pac4j.oidc.credentials.OidcCredentials;
 import org.pac4j.oidc.profile.OidcProfile;
 
-import com.nimbusds.jose.JOSEException;
-import com.nimbusds.jose.JWEDecrypter;
-import com.nimbusds.jose.JWSVerifier;
-import com.nimbusds.jose.crypto.ECDSAVerifier;
-import com.nimbusds.jose.crypto.RSADecrypter;
-import com.nimbusds.jose.crypto.RSASSAVerifier;
-import com.nimbusds.jose.jwk.ECKey;
-import com.nimbusds.jose.jwk.JWK;
-import com.nimbusds.jose.jwk.JWKSet;
-import com.nimbusds.jose.jwk.KeyUse;
-import com.nimbusds.jose.jwk.RSAKey;
-import com.nimbusds.jwt.JWTClaimsSet;
+import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.oauth2.sdk.AuthorizationCode;
 import com.nimbusds.oauth2.sdk.AuthorizationCodeGrant;
 import com.nimbusds.oauth2.sdk.ParseException;
@@ -55,7 +34,10 @@ import com.nimbusds.oauth2.sdk.auth.ClientAuthenticationMethod;
 import com.nimbusds.oauth2.sdk.auth.ClientSecretBasic;
 import com.nimbusds.oauth2.sdk.auth.ClientSecretPost;
 import com.nimbusds.oauth2.sdk.auth.Secret;
+import com.nimbusds.oauth2.sdk.http.DefaultResourceRetriever;
+import com.nimbusds.oauth2.sdk.http.HTTPRequest;
 import com.nimbusds.oauth2.sdk.http.HTTPResponse;
+import com.nimbusds.oauth2.sdk.http.ResourceRetriever;
 import com.nimbusds.oauth2.sdk.id.ClientID;
 import com.nimbusds.oauth2.sdk.id.State;
 import com.nimbusds.oauth2.sdk.token.BearerAccessToken;
@@ -71,11 +53,13 @@ import com.nimbusds.openid.connect.sdk.UserInfoErrorResponse;
 import com.nimbusds.openid.connect.sdk.UserInfoRequest;
 import com.nimbusds.openid.connect.sdk.UserInfoResponse;
 import com.nimbusds.openid.connect.sdk.UserInfoSuccessResponse;
+import com.nimbusds.openid.connect.sdk.claims.IDTokenClaimsSet;
 import com.nimbusds.openid.connect.sdk.claims.UserInfo;
 import com.nimbusds.openid.connect.sdk.op.OIDCProviderMetadata;
 import com.nimbusds.openid.connect.sdk.token.OIDCTokens;
-import com.nimbusds.openid.connect.sdk.util.DefaultJWTDecoder;
-import com.nimbusds.openid.connect.sdk.util.DefaultResourceRetriever;
+import com.nimbusds.openid.connect.sdk.validators.IDTokenValidator;
+
+import static org.pac4j.core.util.CommonHelper.*;
 
 /**
  * This class is the client to authenticate users with an OpenID Connect 1.0 provider.
@@ -85,10 +69,7 @@ import com.nimbusds.openid.connect.sdk.util.DefaultResourceRetriever;
  * @author Michael Remond
  * @since 1.7.0
  */
-public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
-
-    /* Parameter to indicate to send nonce in the authentication request */
-    private static final String USE_NONCE_PARAM = "useNonce";
+public class OidcClient<U extends OidcProfile> extends IndirectClient<OidcCredentials, U> {
 
     /* state attribute name in session */
     private static final String STATE_ATTRIBUTE = "oidcStateAttribute";
@@ -96,7 +77,10 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
     /* nonce attribute name in session */
     private static final String NONCE_ATTRIBUTE = "oidcNonceAttribute";
 
-    /* OpenID client_id */
+    /* default max clock skew */
+    private static final int DEFAULT_MAX_CLOCK_SKEW = 30;
+
+    /* OpenID client identifier */
     private String clientId;
 
     /* OpenID secret */
@@ -108,8 +92,8 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
     /* discovery URI for fetching OP metadata (http://openid.net/specs/openid-connect-discovery-1_0.html) */
     private String discoveryURI;
 
-    /* Decoder for the JWT ID Token */
-    private DefaultJWTDecoder jwtDecoder;
+    /* ID Token verifier */
+    private IDTokenValidator idTokenValidator;
 
     /* OIDC metadata */
     private OIDCProviderMetadata oidcProvider;
@@ -121,16 +105,33 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
     private String scope;
 
     /* Map containing user defined parameters */
-    private Map<String, String> customParams = new HashMap<String, String>();
+    private Map<String, String> customParams = new HashMap<>();
 
     /* client authentication object at the token End Point (basic, form or JWT) */
     private ClientAuthentication clientAuthentication;
+
+    /* client authentication method used at token End Point */
+    private ClientAuthenticationMethod clientAuthenticationMethod;
 
     /* clientID object */
     private ClientID _clientID;
 
     /* secret object */
     private Secret _secret;
+
+    /* use nonce? */
+    private boolean useNonce;
+
+    /* Preferred JWS algorithm */
+    private JWSAlgorithm preferredJwsAlgorithm;
+
+    /* max clock skew in seconds */
+    private int maxClockSkew = DEFAULT_MAX_CLOCK_SKEW;
+
+    /* timeouts for token and userinfo requests */
+    private int connectTimeout = HttpConstants.DEFAULT_CONNECT_TIMEOUT;
+
+    private int readTimeout = HttpConstants.DEFAULT_READ_TIMEOUT;
 
     public OidcClient() { }
 
@@ -140,25 +141,40 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
         this.discoveryURI = discoveryURI;
     }
 
-    @Override
-    public ClientType getClientType() {
-        return ClientType.OPENID_CONNECT_PROTOCOL;
-    }
-
     public void setDiscoveryURI(final String discoveryURI) {
         this.discoveryURI = discoveryURI;
     }
+    
+    public String getDiscoveryURI() {
+        return this.discoveryURI;
+    }
 
-    public void setClientID(final String clientID) {
-        this.clientId = clientID;
+    public void setClientID(final String clientId) {
+        this.clientId = clientId;
+    }
+
+    public String getClientID() {
+        return this.clientId;
     }
 
     public void setSecret(final String secret) {
         this.secret = secret;
     }
+    
+    public String getSecret() {
+        return this.secret;
+    }
 
     public void setScope(String scope) {
-		this.scope = scope;
+        this.scope = scope;
+    }
+
+    public String getScope() {
+        return this.scope;
+    }
+
+    public IDTokenValidator getIdTokenValidator() {
+		return idTokenValidator;
 	}
 
     public void addCustomParam(final String key, final String value) {
@@ -166,88 +182,153 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
     }
 
     public void setCustomParams(Map<String, String> customParams) {
-        CommonHelper.assertNotNull("customParams", customParams);
+        assertNotNull("customParams", customParams);
         this.customParams = customParams;
+    }
+
+    public Map<String, String> getCustomParams() {
+        return this.customParams;
+    }
+
+    public int getConnectTimeout() {
+        return connectTimeout;
+	}
+
+    public void setConnectTimeout(int connectTimeout) {
+        this.connectTimeout = connectTimeout;
+    }
+
+    public int getReadTimeout() {
+        return readTimeout;
+    }
+
+    public void setReadTimeout(int readTimeout) {
+        this.readTimeout = readTimeout;
+    }
+
+    public Map<String, String> getAuthParams() {
+        return this.authParams;
+    }
+
+    public OIDCProviderMetadata getProviderMetadata() {
+        return this.oidcProvider;
+    }
+    
+    public URI getRedirectURI() {
+        return this.redirectURI;
+    }
+
+    public ClientAuthentication getClientAuthentication() {
+        return this.clientAuthentication;
     }
 
     @Override
     protected void internalInit(final WebContext context) {
 
-        CommonHelper.assertNotBlank(this.clientId, "clientID cannot be blank");
-        CommonHelper.assertNotBlank(this.secret, "secret cannot be blank");
-        CommonHelper.assertNotBlank(this.discoveryURI, "discoveryURI cannot be blank");
+        assertNotBlank(getClientID(), "clientId cannot be blank");
+        assertNotBlank(getSecret(), "secret cannot be blank");
+        assertNotBlank(getDiscoveryURI(), "discoveryURI cannot be blank");
 
-        this.authParams = new HashMap<String, String>();
-        
+        this.authParams = new HashMap<>();
+
         // add scope
-        if(StringUtils.isNotBlank(this.scope)){
-        	this.authParams.put("scope", this.scope);
+        if(StringUtils.isNotBlank(getScope())){
+            this.authParams.put("scope", getScope());
         } else {
-	        // default values
-	        this.authParams.put("scope", "openid profile email");
+            // default values
+            this.authParams.put("scope", "openid profile email");
         }
-        
+
         this.authParams.put("response_type", "code");
         final String computedCallbackUrl = computeFinalCallbackUrl(context);
         this.authParams.put("redirect_uri", computedCallbackUrl);
         // add custom values
-        this.authParams.putAll(this.customParams);
+        this.authParams.putAll(getCustomParams());
         // Override with required values
-        this.authParams.put("client_id", this.clientId);
-        this.authParams.put("client_secret", this.secret);
+        this.authParams.put("client_id", getClientID());
+        this.authParams.put("client_secret", getSecret());
 
-        this._clientID = new ClientID(this.clientId);
-        this._secret = new Secret(this.secret);
+        this._clientID = new ClientID(getClientID());
+        this._secret = new Secret(getSecret());
 
-        JWKSet jwkSet;
-        // Download OIDC metadata and Json Web Key Set
         try {
-            DefaultResourceRetriever resourceRetriever = new DefaultResourceRetriever();
+            // Download OIDC metadata
+            ResourceRetriever resourceRetriever = createResourceRetriever();
             this.oidcProvider = OIDCProviderMetadata.parse(resourceRetriever.retrieveResource(
-                    new URL(this.discoveryURI)).getContent());
-            jwkSet = JWKSet.parse(resourceRetriever.retrieveResource(this.oidcProvider.getJWKSetURI().toURL())
-                    .getContent());
-
+                    new URL(getDiscoveryURI())).getContent());
             this.redirectURI = new URI(computedCallbackUrl);
-        } catch (Exception e) {
+            // check algorithms
+            final List<JWSAlgorithm> algorithms = getProviderMetadata().getIDTokenJWSAlgs();
+            assertTrue(isNotEmpty(algorithms), "There must at least one JWS algorithm supported on the OpenID Connect provider side");
+            final JWSAlgorithm jwsAlgorithm;
+            if (algorithms.contains(getPreferredJwsAlgorithm())) {
+                jwsAlgorithm = getPreferredJwsAlgorithm();
+            } else {
+                jwsAlgorithm = algorithms.get(0);
+                logger.warn("Preferred JWS algorithm: {} not available. Defaulting to: {}", getPreferredJwsAlgorithm(), jwsAlgorithm);
+            }
+            // Init IDTokenVerifier
+            if (isNotBlank(getSecret()) && (jwsAlgorithm == JWSAlgorithm.HS256 || jwsAlgorithm == JWSAlgorithm.HS384 || jwsAlgorithm == JWSAlgorithm.HS512)) {
+                this.idTokenValidator = createHMACTokenValidator(jwsAlgorithm, _clientID, _secret);
+            } else {
+                this.idTokenValidator = createRSATokenValidator(jwsAlgorithm, _clientID);
+            }
+            getIdTokenValidator().setMaxClockSkew(getMaxClockSkew());
+
+        } catch (final IOException | ParseException | URISyntaxException e) {
             throw new TechnicalException(e);
         }
-        // Get available client authentication method
-        ClientAuthenticationMethod method = getClientAuthenticationMethod();
-        this.clientAuthentication = getClientAuthentication(method);
-        // Init JWT decoder
-        this.jwtDecoder = new DefaultJWTDecoder();
-        initJwtDecoder(this.jwtDecoder, jwkSet);
 
+        // check authentication methods
+        final List<ClientAuthenticationMethod> methods = getProviderMetadata().getTokenEndpointAuthMethods();
+        final ClientAuthenticationMethod method;
+
+        if (!methods.isEmpty()) {
+            if (methods.contains(getClientAuthenticationMethod())) {
+                method = getClientAuthenticationMethod();
+            } else {
+                method = getProviderMetadata().getTokenEndpointAuthMethods().get(0);
+                logger.warn("Preferred token endpoint Authentication method: {} not available. Defaulting to: {}",
+                        getClientAuthenticationMethod(), method);
+            }
+        } else {
+            method = ClientAuthenticationMethod.getDefault();
+            logger.warn("Provider metadata does not provide Token endpoint authentication methods. Defaulting to: {}",
+                    method);
+        }
+
+        if (ClientAuthenticationMethod.CLIENT_SECRET_POST.equals(method)) {
+            this.clientAuthentication = new ClientSecretPost(this._clientID, this._secret);
+        } else if (ClientAuthenticationMethod.CLIENT_SECRET_BASIC.equals(method)) {
+            this.clientAuthentication = new ClientSecretBasic(this._clientID, this._secret);
+        }
+    }
+
+	protected IDTokenValidator createRSATokenValidator(
+			final JWSAlgorithm jwsAlgorithm, ClientID clientID) throws MalformedURLException {
+		return new IDTokenValidator(getProviderMetadata().getIssuer(), clientID, jwsAlgorithm, getProviderMetadata().getJWKSetURI().toURL());
+	}
+
+	protected IDTokenValidator createHMACTokenValidator(
+			final JWSAlgorithm jwsAlgorithm, final ClientID clientID, final Secret secret) {
+		return new IDTokenValidator(getProviderMetadata().getIssuer(), clientID, jwsAlgorithm, secret);
+	}
+
+    protected ResourceRetriever createResourceRetriever() {
+        return new DefaultResourceRetriever(getConnectTimeout(), getReadTimeout());
     }
 
     @Override
-    protected IndirectClient<OidcCredentials, OidcProfile> newClient() {
-        OidcClient client = new OidcClient();
-        client.setClientID(this.clientId);
-        client.setSecret(this.secret);
-        client.setDiscoveryURI(this.discoveryURI);
-        client.setAuthParams(this.authParams);
+    protected RedirectAction retrieveRedirectAction(final WebContext context) throws RequiresHttpAction {
 
-        return client;
-    }
-
-    @Override
-    protected boolean isDirectRedirection() {
-        return true;
-    }
-
-    @Override
-    protected RedirectAction retrieveRedirectAction(final WebContext context) {
-
-        Map<String, String> params = new HashMap<String, String>(this.authParams);
+        Map<String, String> params = new HashMap<>(getAuthParams());
 
         // Init state for CSRF mitigation
         State state = new State();
         params.put("state", state.getValue());
         context.setSessionAttribute(STATE_ATTRIBUTE, state);
         // Init nonce for replay attack mitigation
-        if (useNonce()) {
+        if (isUseNonce()) {
             Nonce nonce = new Nonce();
             params.put("nonce", nonce.getValue());
             context.setSessionAttribute(NONCE_ATTRIBUTE, nonce.getValue());
@@ -260,7 +341,7 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
         } catch (Exception e) {
             throw new TechnicalException(e);
         }
-        String location = this.oidcProvider.getAuthorizationEndpointURI().toString() + "?" + queryString;
+        String location = getProviderMetadata().getAuthorizationEndpointURI().toString() + "?" + queryString;
         logger.debug("Authentication request url : {}", location);
 
         return RedirectAction.redirect(location);
@@ -273,7 +354,7 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
         Map<String, String> parameters = toSingleParameter(context.getRequestParameters());
         AuthenticationResponse response;
         try {
-            response = AuthenticationResponseParser.parse(this.redirectURI, parameters);
+            response = AuthenticationResponseParser.parse(getRedirectURI(), parameters);
         } catch (ParseException e) {
             throw new TechnicalException(e);
         }
@@ -299,37 +380,45 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
     }
 
     @Override
-    protected OidcProfile retrieveUserProfile(final OidcCredentials credentials, final WebContext context) {
+    protected U retrieveUserProfile(final OidcCredentials credentials, final WebContext context) throws RequiresHttpAction {
 
-        final TokenRequest request = new TokenRequest(this.oidcProvider.getTokenEndpointURI(), this.clientAuthentication,
-                new AuthorizationCodeGrant(credentials.getCode(), this.redirectURI));
+        final TokenRequest request = buildTokenRequest(credentials);
         HTTPResponse httpResponse;
         try {
             // Token request
-            httpResponse = request.toHTTPRequest().send();
+            HTTPRequest tokenHttpRequest = request.toHTTPRequest();
+            tokenHttpRequest.setConnectTimeout(getConnectTimeout());
+            tokenHttpRequest.setReadTimeout(getReadTimeout());
+            httpResponse = tokenHttpRequest.send();
             logger.debug("Token response: status={}, content={}", httpResponse.getStatusCode(),
                     httpResponse.getContent());
 
             final TokenResponse response = OIDCTokenResponseParser.parse(httpResponse);
             if (response instanceof TokenErrorResponse) {
-                logger.error("Bad token response, error={}", ((TokenErrorResponse) response).getErrorObject());
-                return null;
+                throw new TechnicalException("Bad token response, error=" + ((TokenErrorResponse) response).getErrorObject());
             }
             logger.debug("Token response successful");
             final OIDCTokenResponse tokenSuccessResponse = (OIDCTokenResponse) response;
             final OIDCTokens oidcTokens = tokenSuccessResponse.getOIDCTokens();
             final BearerAccessToken accessToken = (BearerAccessToken) oidcTokens.getAccessToken();
 
-            // Create Oidc profile
-            OidcProfile profile = new OidcProfile(accessToken);
+            // Create profile
+            final U profile = createProfile();
+            profile.setAccessToken(accessToken);
             profile.setIdTokenString(oidcTokens.getIDTokenString());
+            // Check if there is refresh token
+            if (oidcTokens.getRefreshToken() != null && !oidcTokens.getRefreshToken().getValue().isEmpty()) {
+            	profile.setRefreshTokenString(oidcTokens.getRefreshToken().getValue());
+            	logger.debug("Refresh Token successful retrieved");
+            }
 
             // User Info request
-            UserInfo userInfo = null;
-            if (this.oidcProvider.getUserInfoEndpointURI() != null) {
-                UserInfoRequest userInfoRequest = new UserInfoRequest(this.oidcProvider.getUserInfoEndpointURI(),
-                        accessToken);
-                httpResponse = userInfoRequest.toHTTPRequest().send();
+            if (getProviderMetadata().getUserInfoEndpointURI() != null) {
+                UserInfoRequest userInfoRequest = buildUserInfoRequest(accessToken);
+                HTTPRequest userInfoHttpRequest = userInfoRequest.toHTTPRequest();
+                userInfoHttpRequest.setConnectTimeout(getConnectTimeout());
+                userInfoHttpRequest.setReadTimeout(getReadTimeout());
+                httpResponse = userInfoHttpRequest.send();
                 logger.debug("Token response: status={}, content={}", httpResponse.getStatusCode(),
                         httpResponse.getContent());
 
@@ -339,119 +428,96 @@ public class OidcClient extends IndirectClient<OidcCredentials, OidcProfile> {
                     logger.error("Bad User Info response, error={}",
                             ((UserInfoErrorResponse) userInfoResponse).getErrorObject());
                 } else {
-                    UserInfoSuccessResponse userInfoSuccessResponse = (UserInfoSuccessResponse) userInfoResponse;
-                    userInfo = userInfoSuccessResponse.getUserInfo();
-                    if(userInfo != null){
+                    final UserInfoSuccessResponse userInfoSuccessResponse = (UserInfoSuccessResponse) userInfoResponse;
+                    final UserInfo userInfo = userInfoSuccessResponse.getUserInfo();
+                    if (userInfo != null){
                     	profile.addAttributes(userInfo.toJWTClaimsSet().getClaims());
                     }
                 }
             }
 
+            final Nonce nonce;
+            if (isUseNonce()) {
+                nonce = new Nonce((String) context.getSessionAttribute(NONCE_ATTRIBUTE));
+            } else {
+                nonce = null;
+            }
             // Check ID Token
-            final JWTClaimsSet claimsSet = this.jwtDecoder.decodeJWT(oidcTokens.getIDToken());
-            if(claimsSet != null){
-            	profile.setId(claimsSet.getSubject());
-            	profile.addAttributes(claimsSet.getClaims());
-            }
-            
-            if (useNonce()) {
-                String nonce = claimsSet.getStringClaim("nonce");
-                if (nonce == null || !nonce.equals(context.getSessionAttribute(NONCE_ATTRIBUTE))) {
-                    throw new TechnicalException(
-                            "A nonce was sent in the authentication request but it is missing or different in the ID Token. "
-                                    + "Session expired or possible threat of cross-site request forgery");
-                }
-            }
+            final IDTokenClaimsSet claimsSet = getIdTokenValidator().validate(oidcTokens.getIDToken(), nonce);
+            assertNotNull("claimsSet", claimsSet);
+            profile.setId(claimsSet.getSubject());
 
             return profile;
 
-        } catch (Exception e) {
+        } catch (final RuntimeException | JOSEException | BadJOSEException | IOException | ParseException e) {
             throw new TechnicalException(e);
         }
 
     }
 
     /**
-     * Returns the first available authentication method from the OP.
+     * Create the appropriate profile type.
      *
-     * @return
+     * @return the profile
      */
-    private ClientAuthenticationMethod getClientAuthenticationMethod() {
-        return this.oidcProvider.getTokenEndpointAuthMethods() != null
-                && this.oidcProvider.getTokenEndpointAuthMethods().size() > 0 ? this.oidcProvider
-                .getTokenEndpointAuthMethods().get(0) : ClientAuthenticationMethod.getDefault();
+    protected U createProfile() {
+        return (U) new OidcProfile();
     }
 
     /**
-     * Returns <code>true</code> if we want to use a nonce.
-     *
-     * @return
+     * @param credentials the OpenID Connect credentials
+     * @return the TokenRequest object that will be used to query the OIDC Token endpoint.
      */
-    private boolean useNonce() {
-        return Boolean.parseBoolean(this.authParams.get(USE_NONCE_PARAM));
+    protected TokenRequest buildTokenRequest(OidcCredentials credentials) {
+        return new TokenRequest(getProviderMetadata().getTokenEndpointURI(), getClientAuthentication(),
+                new AuthorizationCodeGrant(credentials.getCode(), getRedirectURI()));
     }
 
     /**
-     * Add the required verifiers and decrypters to the JWT Decoder based on the JWK set from the OP.
-     *
-     * @param jwtDecoder
-     * @param jwkSet
+     * @param accessToken the access token
+     * @return The UserInfoRequest object that will be used to query the OIDC UserInfo endpoint
      */
-    private void initJwtDecoder(final DefaultJWTDecoder jwtDecoder, final JWKSet jwkSet) {
-        try {
-            for (JWK key : jwkSet.getKeys()) {
-                if (key.getKeyUse() == KeyUse.SIGNATURE) {
-                    jwtDecoder.addJWSVerifier(getVerifier(key));
-                } else if (key.getKeyUse() == KeyUse.ENCRYPTION) {
-                    jwtDecoder.addJWEDecrypter(getDecrypter(key));
-                }
-            }
-        } catch (Exception e) {
-            throw new TechnicalException(e);
-        }
-    }
-
-    private JWEDecrypter getDecrypter(final JWK key) throws JOSEException {
-        if (key instanceof RSAKey) {
-            return new RSADecrypter(((RSAKey) key).toRSAPrivateKey());
-        }
-        return null;
-    }
-
-    private JWSVerifier getVerifier(final JWK key) throws JOSEException {
-        if (key instanceof RSAKey) {
-            return new RSASSAVerifier(((RSAKey) key).toRSAPublicKey());
-        } else if (key instanceof ECKey) {
-            ECKey ecKey = (ECKey) key;
-            return new ECDSAVerifier(ecKey);
-        }
-        return null;
-    }
-
-    /**
-     * Returns a configured Client Authentication with method, client_id and secret for the token End Point.
-     *
-     * @param method
-     * @return
-     */
-    private ClientAuthentication getClientAuthentication(final ClientAuthenticationMethod method) {
-        if (ClientAuthenticationMethod.CLIENT_SECRET_POST.equals(method)) {
-            return new ClientSecretPost(this._clientID, this._secret);
-        } else if (ClientAuthenticationMethod.CLIENT_SECRET_BASIC.equals(method)) {
-            return new ClientSecretBasic(this._clientID, this._secret);
-        }
-        return null;
+    protected UserInfoRequest buildUserInfoRequest(BearerAccessToken accessToken) {
+        return new UserInfoRequest(getProviderMetadata().getUserInfoEndpointURI(), accessToken);
     }
 
     private Map<String, String> toSingleParameter(final Map<String, String[]> requestParameters) {
-        Map<String, String> map = new HashMap<String, String>();
+        Map<String, String> map = new HashMap<>();
         for (Entry<String, String[]> entry : requestParameters.entrySet()) {
             map.put(entry.getKey(), entry.getValue()[0]);
         }
         return map;
     }
 
-    private void setAuthParams(final Map<String, String> authParams) {
-        this.authParams = authParams;
+    public JWSAlgorithm getPreferredJwsAlgorithm() {
+        return this.preferredJwsAlgorithm;
+    }
+
+    public void setPreferredJwsAlgorithm(JWSAlgorithm preferredJwsAlgorithm) {
+        this.preferredJwsAlgorithm = preferredJwsAlgorithm;
+    }
+
+    public boolean isUseNonce() {
+        return this.useNonce;
+    }
+
+    public void setUseNonce(boolean useNonce) {
+        this.useNonce = useNonce;
+    }
+
+    public int getMaxClockSkew() {
+        return this.maxClockSkew;
+    }
+
+    public void setMaxClockSkew(int maxClockSkew) {
+        this.maxClockSkew = maxClockSkew;
+    }
+
+    public ClientAuthenticationMethod getClientAuthenticationMethod() {
+        return clientAuthenticationMethod;
+    }
+
+    public void setClientAuthenticationMethod(ClientAuthenticationMethod clientAuthenticationMethod) {
+        this.clientAuthenticationMethod = clientAuthenticationMethod;
     }
 }
